<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/margin_elevation"
        app:cardElevation="@dimen/margin_elevation">

        <!--<ImageView-->
        <!--android:id="@+id/img_trash"-->
        <!--android:layout_width="24dp"-->
        <!--android:layout_height="24dp"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:src="@drawable/trash" />-->

        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Bg_Text_History"
            android:orientation="vertical"
            android:padding="@dimen/margin_space_text">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/TextShow1"
                android:textSize="@dimen/margin_space_text" />

            <TextView
                android:id="@+id/textNameCarDB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/TextHead"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="wrap_content"
                    android:text="@string/text_type_car" />

                <TextView
                    android:id="@+id/textTypeCarDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_space_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_origin" />

                <TextView
                    android:id="@+id/startTextLocationDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_space_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_destination" />

                <TextView
                    android:id="@+id/endTextLocationDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_space_text" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_distance" />

                <TextView
                    android:id="@+id/distanceTextOilDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_time" />

                <TextView
                    android:id="@+id/durationTextOilDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_type_oil" />

                <TextView
                    android:id="@+id/textTypeOilDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_space_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_amount_oil" />

                <TextView
                    android:id="@+id/calOilDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_price_oil" />

                <TextView
                    android:id="@+id/calMoneyDB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_line"
                android:orientation="horizontal">

                <TextView
                    style="@style/textCalculateHead"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_average" />

                <TextView
                    android:id="@+id/average_DB"
                    style="@style/textCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/card_view"></RelativeLayout>

</RelativeLayout>