<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_Cal">

    <RelativeLayout
        android:id="@+id/relativeall"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeOil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="vertical">


                <android.support.v7.widget.CardView
                    style="@style/borderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Bg_Text_Cal"
                    app:cardCornerRadius="@dimen/margin_elevation"
                    app:cardElevation="@dimen/margin_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Bg_Text_Cal"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/margin_small">

                        <Spinner
                            android:id="@+id/spinTpye"
                            style="@style/spinnerStyle"
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/margin_xlarge"></Spinner>

                        <Spinner
                            android:id="@+id/spinType2"
                            style="@style/spinnerStyle"
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/margin_xlarge"></Spinner>

                        <Spinner
                            android:id="@+id/spinOil"
                            style="@style/spinnerStyle"
                            android:layout_width="fill_parent"
                            android:layout_height="@dimen/margin_xlarge"></Spinner>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radioTown"
                                style="@style/radioStyle"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/margin_xlarge"
                                android:text="@string/text_town" />

                            <RadioButton
                                android:id="@+id/radopCountrySide"
                                style="@style/radioStyle"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/margin_xlarge"
                                android:layout_marginTop="@dimen/margin_space"
                                android:text="@string/text_countryside" />

                            <RadioButton
                                android:id="@+id/radioCombined"
                                style="@style/radioStyle"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/margin_xlarge"
                                android:layout_marginTop="@dimen/margin_space"
                                android:text="@string/text_combine" />

                        </RadioGroup>
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/margin_normal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_marginLeft="@dimen/margin_elevation"
                            android:orientation="horizontal">

                            <android.support.v7.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/margin_space"
                                android:layout_weight="1"
                                android:background="@color/edt_cal"
                                android:backgroundTint="@color/edt_cal"
                                app:cardCornerRadius="@dimen/margin_small">

                                <EditText
                                    android:id="@+id/edt_oil_price"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:background="@color/edt_cal"
                                    android:backgroundTint="@color/edt_cal"
                                    android:gravity="center"
                                    android:hint="@string/text_price_oil"
                                    android:imeOptions="actionDone"
                                    android:inputType="numberDecimal"
                                    android:textSize="@dimen/textsize_normal" />
                            </android.support.v7.widget.CardView>

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/margin_small"
                                android:layout_marginRight="@dimen/margin_small">

                                <ImageView
                                    android:id="@+id/image_search_oil_price"
                                    android:layout_width="42dp"
                                    android:layout_height="42dp"
                                    android:background="@drawable/ic_gas_station" />
                            </RelativeLayout>
                        </LinearLayout>

                        <android.support.v7.widget.CardView
                            style="@style/borderStyle"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:cardCornerRadius="@dimen/margin_elevation"
                            app:cardElevation="@dimen/margin_elevation">

                            <Button
                                android:id="@+id/btncal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/Bg_btn_cal"
                                android:elevation="@dimen/margin_elevation"
                                android:text="@string/text_calculate"
                                android:textColor="@color/text_btn_cal"
                                android:textSize="@dimen/textsize_normal" />
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeOil2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeOil"
            android:visibility="invisible">

            <android.support.v7.widget.CardView
                android:id="@+id/lineardata"
                style="@style/borderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                app:cardCornerRadius="@dimen/margin_elevation"
                app:cardElevation="@dimen/margin_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Bg_Text_Cal"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_space_text">

                    <TextView
                        android:id="@+id/textNameCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/TextHead"
                        android:textSize="@dimen/textsize_large"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_line"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_type_car" />

                        <TextView
                            android:id="@+id/textTypeCar"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_space_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_line"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_origin" />

                        <TextView
                            android:id="@+id/startTextLocation"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_space_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_line"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_destination" />

                        <TextView
                            android:id="@+id/endTextLocation"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_space_text" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_line"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_distance" />

                        <TextView
                            android:id="@+id/distanceTextOil"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />


                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_time" />

                        <TextView
                            android:id="@+id/durationTextOil"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_line"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_type_oil" />

                        <TextView
                            android:id="@+id/textTypeOil"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_space_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_line"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_amount_oil" />

                        <TextView
                            android:id="@+id/calOil"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_spend" />

                        <TextView
                            android:id="@+id/calMoney"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_line"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textCalculateHead"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_average" />

                        <TextView
                            android:id="@+id/average"
                            style="@style/textCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_text_save"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/GreenLight"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textSave"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/text_save"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_normal" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>






