<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreenVeryLight"
    tools:context="com.example.hispeed.calculatoroil.EcoStickerFragment">

    <LinearLayout
        android:id="@+id/linearText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/text_eco_sticker"
            android:textColor="@color/Red"
            android:textSize="@dimen/textsize_header"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:breakStrategy="high_quality"
            android:hyphenationFrequency="full"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/margin_elevation"
            android:text="@string/eco_sticker"
            android:textColor="@color/Black"
            android:textSize="@dimen/textsize_normal"
            android:typeface="serif" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearText"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/textsize_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_toRightOf="@+id/ImgCargif"
        android:padding="@dimen/margin_space">

        <android.support.v7.widget.CardView
            style="@style/borderStyle"
            app:cardCornerRadius="@dimen/margin_small"
            app:cardElevation="@dimen/margin_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/orange"
            android:padding="@dimen/margin_small">

            <Button
                android:id="@+id/btn_eco_sticker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:padding="@dimen/margin_small"
                android:text="@string/text_btn_eco_sticker"
                android:textSize="@dimen/textsize_normal" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/ImgCargif"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/margin_large" />

</RelativeLayout>
